<resources>
    <string name="app_name">Recipe</string>
    <string name="shopping_list">Shopping List</string>

    <string name="all_cuisine">All Cuisine</string>
    <string-array name="cuisine_list">
        <item>All Cuisine</item>
        <item>American</item>
        <item>Caribbean</item>
        <item>French</item>
        <item>German</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Spanish</item>
        <item>Thai</item>
    </string-array>

    <string name="all_sort">All Sort</string>
    <string name="search">Search</string>
    <string-array name="sort_list">
        <item>All Sort</item>
        <item>popularity</item>
        <item>healthiness</item>
        <item>price</item>
        <item>time</item>
        <item>random</item>
        <item>max-used-ingredients</item>
        <item>min-missing-ingredients</item>
        <item>iron</item>
        <item>energy</item>
        <item>protein</item>
        <item>calcium</item>
        <item>fiber</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_detail">Product Detail</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="ingredients_list">Ingredients List :</string>
    <string name="recipe">Recipe :</string>
    <string name="nutritional_value">Nutritional value :</string>
    <string name="note_click_on_plus_icon_to_add_the_ingredient_in_cart">Note : Click on plus icon to add the ingredient in cart</string>
    <string name="your_favourite_recipes">Your Favourite Recipes</string>
    <string name="user_details">User Details</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="save">Save</string>
    <string name="preferred_cuisine_type">Preferred Cuisine type :</string>
    <string name="edit">Edit</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="date">Date</string>
    <string name="search_your_dish">Search your dish</string>
    <string name="add_to_plan_as">Add to Meal Plan as :</string>

    <!--    <string-array name="cuisine_list">-->
    <!--        <item>All</item>-->
    <!--        <item>African</item>-->
    <!--        <item>American</item>-->
    <!--        <item>British</item>-->
    <!--        <item>Cajun</item>-->
    <!--        <item>Caribbean</item>-->
    <!--        <item>Chinese</item>-->
    <!--        <item>Eastern European</item>-->
    <!--        <item>European</item>-->
    <!--        <item>French</item>-->
    <!--        <item>German</item>-->
    <!--        <item>Greek</item>-->
    <!--        <item>Indian</item>-->
    <!--        <item>Irish</item>-->
    <!--        <item>Italian</item>-->
    <!--        <item>Japanese</item>-->
    <!--        <item>Jewish</item>-->
    <!--        <item>Korean</item>-->
    <!--        <item>Latin American</item>-->
    <!--        <item>Mediterranean</item>-->
    <!--        <item>Mexican</item>-->
    <!--        <item>Middle Eastern</item>-->
    <!--        <item>Nordic</item>-->
    <!--        <item>Southern</item>-->
    <!--        <item>Spanish</item>-->
    <!--        <item>Thai</item>-->
    <!--        <item>Vietnamese</item>-->
    <!--    </string-array>-->

    <!--    <string-array name="mineral_list">-->
    <!--        <item>All</item>-->
    <!--        <item>(empty)</item>-->
    <!--        <item>folate</item>-->
    <!--        <item>sugar</item>-->
    <!--        <item>meta-score</item>-->
    <!--        <item>folic-acid</item>-->
    <!--        <item>zinc</item>-->
    <!--        <item>popularity</item>-->
    <!--        <item>iodine</item>-->
    <!--        <item>healthiness</item>-->
    <!--        <item>iron</item>-->
    <!--        <item>price</item>-->
    <!--        <item>magnesium</item>-->
    <!--        <item>time</item>-->
    <!--        <item>manganese</item>-->
    <!--        <item>random</item>-->
    <!--        <item>vitamin-b3</item>-->
    <!--        <item>max-used-ingredients</item>-->
    <!--        <item>niacin</item>-->
    <!--        <item>min-missing-ingredients</item>-->
    <!--        <item>vitamin-b5</item>-->
    <!--        <item>alcohol</item>-->
    <!--        <item>pantothenic-acid</item>-->
    <!--        <item>caffeine</item>-->
    <!--        <item>phosphorus</item>-->
    <!--        <item>copper</item>-->
    <!--        <item>potassium</item>-->
    <!--        <item>energy</item>-->
    <!--        <item>protein</item>-->
    <!--        <item>calories</item>-->
    <!--        <item>vitamin-b2</item>-->
    <!--        <item>calcium</item>-->
    <!--        <item>riboflavin</item>-->
    <!--        <item>carbohydrates</item>-->
    <!--        <item>selenium</item>-->
    <!--        <item>carbs</item>-->
    <!--        <item>sodium</item>-->
    <!--        <item>choline</item>-->
    <!--        <item>vitamin-b1</item>-->
    <!--        <item>cholesterol</item>-->
    <!--        <item>thiamin</item>-->
    <!--        <item>total-fat</item>-->
    <!--        <item>vitamin-a</item>-->
    <!--        <item>fluoride</item>-->
    <!--        <item>vitamin-b6</item>-->
    <!--        <item>trans-fat</item>-->
    <!--        <item>vitamin-b12</item>-->
    <!--        <item>saturated-fat</item>-->
    <!--        <item>vitamin-c</item>-->
    <!--        <item>mono-unsaturated-fat</item>-->
    <!--        <item>vitamin-d</item>-->
    <!--        <item>poly-unsaturated-fat</item>-->
    <!--        <item>vitamin-e</item>-->
    <!--        <item>fiber</item>-->
    <!--        <item>vitamin-k</item>-->
    <!--    </string-array>-->

</resources>